statum-macros/tests/ui/invalid_validators_parameter_name_collision.stderr
error: Error: validator `is_draft` for `impl Row` rebuilding `TaskMachine` state `TaskState::Draft` must declare only `&self`.
       Found: `fn is_draft(& self, name: &str)`
       Expected: `fn is_draft(&self) -> Result<(), _>` or `fn is_draft(&self) -> Validation<()>`
       Reason: Parameter name collision: `name` collides with injected machine field binding.
       Note: Machine `TaskMachine` injects these fields by bare name inside validator bodies: `name`. Remove explicit parameters and use those bindings directly.
       Fix: remove explicit parameters and read injected machine fields by bare name inside the validator body.
  --> tests/ui/invalid_validators_parameter_name_collision.rs:30:24
   |
30 |     fn is_draft(&self, name: &str) -> Result<(), statum_core::Error> {
   |                        ^^^^^^^^^^
